.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gldiv__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_gldiv</customHelpPage>
    <description>gldiv__c</description>
    <fields>
        <fullName>rstkf__altextid2__c</fullName>
        <externalId>true</externalId>
        <label>altextid2</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__gldiv_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c +&apos;_&apos;+ rstkf__gldiv_sydiv__r.rstk__sydiv_div__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT(rstkf__gldiv_sydiv__r.rstk__sydiv_descr__c ,72) + &apos;(&apos; +rstkf__gldiv_sydiv__r.rstk__sydiv_div__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gldiv_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Financial Company that this Financial Division is associated with</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Financial Divisions</relationshipLabel>
        <relationshipName>gldivs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gldiv_sydiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Manufacturing Division associated with this Financial Division</inlineHelpText>
        <label>Manufacturing Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Financial Divisions</relationshipLabel>
        <relationshipName>gldivs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Division</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Division_Master</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gldiv_glcmp__c</columns>
        <columns>rstkf__gldiv_sydiv__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Division Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Division_Master_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gldiv_glcmp__c</columns>
        <columns>rstkf__gldiv_sydiv__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Division Master - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__divisionisreq</fullName>
        <active>true</active>
        <description>GL Division is required</description>
        <errorConditionFormula>ISBLANK( rstkf__gldiv_sydiv__c )</errorConditionFormula>
        <errorMessage>Manufacturing Division is required field</errorMessage>
    </validationRules>
</CustomObject>